don't duplicate profile ids.  Remove obsolete activemq-server to try to reduce confusion
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@954686 13f79535-47bb-0310-9956-ffa450edef68